re architecture work in progress