@@ -16,30 +16,24 @@ import java.util.stream.Collectors;
 public class TradeModelService {
     @Autowired
     private TradeModelRepository tradeModelRepository;
-    private boolean dbFetchFlag = true;
-    private List<TradeModel> tradeCalls = new ArrayList<>();
     public boolean registerNewTrade(TradeModel tradeModel){
         log.info("registerNewTrade service method");
         tradeModelRepository.save(tradeModel);
-        dbFetchFlag = true;
         return true;
     }
     public List<TradeModel> getAllActiveTrades(){
-//        todo correct the query
-        if(dbFetchFlag){
-           tradeCalls = tradeModelRepository.findAll();
-           dbFetchFlag = false;
-        }
-        return tradeCalls.stream().filter(tradeModel -> !tradeModel.getTradeStatus().equals(TradeStatus.COMPLETED)).collect(Collectors.toList());
+        return tradeModelRepository.findTradeStatusNot(TradeStatus.COMPLETED);
     }
     public ArrayList<Long> getAllTokens(){
         var trades = getAllActiveTrades();
-        var tokens = trades.stream().map(tradeModel -> tradeModel.getInstrument().getInstrument_token()).distinct().collect(Collectors.toList());
+        var tokens = trades.stream().map(tradeModel -> tradeModel.getInstrument().getInstrumentToken()).distinct().toList();
         return new ArrayList<>(tokens);
     }
     public TradeModel getOrderByInstrumentToken(Long token){
-        var trades = getAllActiveTrades();
-//        todo implement
-        return trades.get(0);
+        var res =tradeModelRepository.findTopByInstrument_InstrumentTokenAndTradeStatusNot(token,TradeStatus.COMPLETED);
+        return res.orElseGet(null);
+    }
+    public void updateTrade(TradeModel tradeModel){
+        tradeModelRepository.save(tradeModel);
     }
 }
